NXP-29984: migrate CacheService to use xmap registries